--- a/index.html
+++ b/index.html
@@ -3,16 +3,21 @@
 <head>
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-   <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
       integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
-      crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
+      crossorigin="anonymous" referrerpolicy="no-referrer" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link rel="stylesheet" href="style.css">
-   <title>Expanding Cards</title>
+   <title>Hidden Search Widget</title>
 </head>
 <body>
-   <h1>Expanding Card</h1>
-   <h2>Hello</h2>
+   <h2>Hidden Search Widget</h2>
+   <div class="search"> 
+      <input type="text" class="input" placeholder="search...">
+      <button class="btn">
+      <i class="fas fa-search"></i>
+      </button>
+   </div>
    <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
